...
    android:layout_width="match_parent"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/display_image"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:tintMode="src_over"
        android:contentDescription="@string/event_image" />
...
